--- a/README
+++ b/README
@@ -9,7 +9,7 @@ Currently it only supports 1vs1 mode to be played against the computer (which
 has a bit of AI). It's still a very early release but it's a fully functional
 package (with a lot of improvement to be done)
 
-This is the URL of the project, where you'll be able to find much more than
+This is the URL of the project, where you should be able to find much more than
 what is written in this README:
 
 http://sourceforge.net/projects/blockem
@@ -22,7 +22,8 @@ Documentation
 
 There's not much documentation about this project yet, but there should be more
 information online than there is in this README file. You should find the most 
-updated version of the source code along with some documentation and help.
+updated version of the source code along with some documentation and help in 
+there.
 
 
 Building and installing
@@ -35,25 +36,34 @@ following libraries to be able to compile this package:
  * gtkmm-2.4
  * glademm-2.4
  
- In a Debian based system (i.e. ubuntu) Try to install the following packages:
-  * libgtkmm-2.4-dev
-  * libglademm-2.4-dev
+In a Debian based system try to install the following packages. It has been 
+tested in ubuntu 9.10:
+ * libgtkmm-2.4-dev
+ * libglademm-2.4-dev
  
- Once those libraries are present in your system untar the package, cd into it,
- and run from the root of the package 'make'. After the compiling process is
- finished you'll see a binary called 'blockem' which contains the program.
+Once those libraries are present in your system untar the package, cd into it,
+and run the famous ./configure && make. Once the compiling process is done
+you'll see a binary called 'blockem' in the directory src/. That is the 
+program you were looking for.
  
- At the moment the program expects the pixmaps in a directory called ./pixmaps
- where . is the directory where blockem is being run. The images won't be 
- loaded correctly if the directory pixmaps is not found. Everything else will
- work as expected
+At the moment the program expects the pixmaps in a directory called ./pixmaps
+(. is the directory where blockem is being run). So if you didn't change 
+anything after the `configure && make` process was finished try to run the
+program like this: 
+
+$ ./src/blockem
+
+The images should be loaded correctly. If it doesn't happen, do not worry (and
+be happy), everything else will work as expected, but the app will be a bit
+less pretty.
+
+
+Developers
+----------
  
- 
- Developers
- ----------
- 
- I haven't had enough time to build the doxygen documentation for the project,
- but I tried to document a lot in code using the doxygen standard. There will
- be (at some point) a small introduction to the project, including some class 
- diagrams to explain the system easily for whoever wants to participate (or
- whoever is curious enough to know what is going on in this project)
+I haven't had enough time to build the doxygen documentation for the project,
+but I tried to document a lot in code using the doxygen standard. There will
+be (at some point) a small introduction to the project, including some class 
+diagrams to explain the system easily for whoever wants to participate (or
+whoever is curious enough to know what is going on in this project)
+
