--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,6 @@
+now: working version
+    - Port to windows done. Code compiles in both linux and windows
+
 04/02/2010: Version 0.1.0
     - This is the first release of this project.
     - At the moment it contains a fully functional 1vs1 game based on the 
