--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,5 +1,9 @@
 now: Version current
+    - Computer's pieces left are shown on the right side of the board
+    - Current score is shown in the status bar at all times
     - Correct version shown on the AboutDialog when help->About is pressed
+    - Editing piece area shows a circle sorrounding the selected piece
+    - More refactoring done on the GUI code
 
 26/03/2010: Version 0.1.2
     - The ugly buttons that used to represent pieces have been changed by 
