--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,4 @@
-now: Version current
+04/04/2010: Version 0.1.3
     - Computer's pieces left are shown on the right side of the board
     - Current score is shown on the status bar at all times
     - Correct version shown on the AboutDialog when help->About is pressed
