--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,4 @@
-now: Version current
+now: Version 0.1.4
     - Added stopwatch to measure how long computer and human take to move
     - Computer player doesn't process the next move so hard if it already 
       managed to block completely the human user (it was a bit tedious to wait
@@ -6,6 +6,9 @@ now: Version current
     - Added a bit of randomness to the starting move when the computer player
       starts. What is life without randomness after all?
     - Progress bar in the status bar is fully functional
+    - Removed extra command line window when running in the windows platform
+    - Board drawing area is now handling its own events. GUI code has been
+      improved a lot throughout the last couple of versions
 
 04/04/2010: Version 0.1.3
     - Computer's pieces left are shown on the right side of the board
