--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,8 @@
+now: Version
+    - Minmax has been fixed. It was faulty because pieces weren't being 
+      rotated once they were mirrored during the AI calculations.
+    - Rotation to the left is available in the editing pieces area
+
 09/04/2010: Version 0.1.4
     - Added stopwatch to measure how long computer and human take to move
     - Computer player doesn't process the next move so hard if it already 
