--- a/doc/TODO
+++ b/doc/TODO
@@ -11,8 +11,11 @@ basic things that need to be done:
    the next move)
  + There are some TODOs in the GUI code is improvable. They'll have to be
    solved little by little
+ + Remove dependecy from glade. Use GtkBuilder instead
  + It should be possible to generate doxygen. Add it to the makefiles
  + Installer for the windows platform
  + There's no need to compile the test app with all the gui libraries and flags
    Have a look at configure.ac and src/test/Makefile.am to fix it
  + Images and icons are not shown correctly in windows
+ + keep history of the moves and offer the user the possibility to go back
+   and resume an old game
