--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,7 +1,10 @@
 now: Version next
-    - App kills itself when unexpected state occurs if cumputing thread is 
-      busy
-    - Progress bar is totally thread safe now
+    - Computer's latest piece deployed glows so human user can easily notice
+      what was the latest move
+    - App kills itself instead of hunging up when unexpected state occurs 
+      if cumputing thread is busy
+    - Progress bar and moves calculated by worker thread are totally 
+      thread-safe now
 
 16/04/2010: Version 0.1.5
     - Minmax has been fixed. It was faulty because pieces weren't being 
