--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,8 @@
+: Version 0.2.0
+    - Player handling through through Game1v1 interface simplified
+    - Piece edition improved for those pieces with only one possible
+      confuration
+
 24/04/2010: Version 0.1.6
     - Computer's latest piece deployed glows so human user can easily notice
       what was the latest move
