app ready to allow human vs. human games and computer playing as player 1 or 2 (both at the same time not yet)

--- a/doc/TODO
+++ b/doc/TODO
@@ -16,3 +16,4 @@ basic things that need to be done:
  + Images and icons are not shown correctly in windows
  + keep history of the moves and offer the user the possibility to go back
    and resume an old game
+ + Add the possibility of having a game between computers
