--- a/doc/TODO
+++ b/doc/TODO
@@ -1,5 +1,5 @@
-This is a sketch of an organized TODO document. There are a couple of very
-basic things that need to be done:
+This document contains quite a lot of ideas that cross over my mind, which are
+supposed to be integrated in blockem at some point in the future:
 
  + Options in menu Settings and Preferences should do something. This should 
    be pretty straight-forward
