--- a/doc/TODO
+++ b/doc/TODO
@@ -25,5 +25,7 @@ supposed to be integrated in blockem at some point in the future:
    three pieces...
  + why not making starting coordinate editable at all times (not only when a
    new game is launched)?
- + Fix warning when  compiling in windows
+ + Fix warning when compiling in windows
+ + Checks like #ifdef WIN32 should be changed into something that is set by
+   autotools in config.h
    
