--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,6 +1,5 @@
 : Version 0.2.2
-    - Using precalculated array of pieces in minimax algorithm without 
-      setting current piece coords.
+    - minimax algorithm improved. 5% performance improvement since 0.2.1.
 
 24/05/2010: Version 0.2.1
     - Around 8% computing time improvement in the minimax algorithm (tested
