influence area based heuristics added to GUI. Influence areas are yet to be shown on the board

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -4,8 +4,17 @@
       the following error: 
         "error: gthread_supported call failed when initialising gthreads"
         "error: App can't start without gthreads support"
-    - minimax algorithm improved. 5% performance improvement since 0.2.1.
-    - Influence areas of each player can be shown on the board
+    - Minimax algorithm improved. 5% performance improvement since 0.2.1 
+      without taking into account calculation of influence areas
+    - Influence areas of each player can be shown on the board. They are
+      mainly used to improve heuristic behaviour (though they add around 20%
+      overhead to the minimax algorithm)
+    - Two new heuristics have been added: "Influence area", and "Mr. Eastwood"
+      which are both based on the influence area calculation. They are much
+      harder to beat than older heuristics
+    - "NK weighted v1" has been renamed to "Centre focused", while "NK 
+      weighted v2" is now "NK weighted". There is still a lot of work to be
+      done on heuristics, but this topic looks like and endless one
 
 24/05/2010: Version 0.2.1
     - Around 8% computing time improvement in the minimax algorithm (tested
