--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,4 @@
-: Version 0.2.2
+21/06/2010: Version 0.2.2
     - Code adapted to be able to run with glib >= 2.24 (included in ubuntu
       10.4). Earlier versions couldn't run with that library version due to
       the following error: 
